_Source/force-app/main/default/objects/BI_Account_Plan__c/BI_Account_Plan__c.object-meta.xml
<CustomObject>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>