_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Account__c.field-meta.xml
<CustomField>
    <fullName>BI_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>BI_Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>