_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Id__c</fullName>
    <formula>BI_Account__r.Id</formula>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>