_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Account_Overview_History__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Overview_History__c</fullName>
    <description>Deprecated in BI Release 2019 - 11</description>
    <label>xAccount Overview &amp; History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>