_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Type__c</fullName>
    <formula>BI_Account__r.RecordType.DeveloperName</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>