_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_APM_12_ME__c.field-meta.xml
<CustomField>
    <fullName>BI_APM_12_ME__c</fullName>
    <description>Deprecated in BI Release 2019 - 11 (field is now on the Account object:: JV APM Share %)</description>
    <inlineHelpText>Sales or Bookings APM %</inlineHelpText>
    <label>xJV APM % (12 ME)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>