_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Auto_Complete_From_Prior_Year_Plan__c.field-meta.xml
<CustomField>
    <fullName>BI_Auto_Complete_From_Prior_Year_Plan__c</fullName>
    <defaultValue>&apos;Yes&apos;</defaultValue>
    <inlineHelpText>Yes - When creating a new plan, selected fields will auto complete, based on details in the account plan for the prior year, if one exists (ex. if you are creating a plan for 2019, details will pre-populate for you, based on 2018&apos;s plan for the account)</inlineHelpText>
    <label>Auto Complete From Prior Year Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>