_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Auto_Completed_From__c.field-meta.xml
<CustomField>
    <fullName>BI_Auto_Completed_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auto Completed From</label>
    <referenceTo>BI_Account_Plan__c</referenceTo>
    <relationshipLabel>Auto-Completed Plans</relationshipLabel>
    <relationshipName>BI_Auto_Completed_Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>