_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Current_Contract_Compliance__c.field-meta.xml
<CustomField>
    <fullName>BI_Current_Contract_Compliance__c</fullName>
    <formula>BI_Account__r.SIP_Current_Contract_Performance__c</formula>
    <inlineHelpText>Field is auto populated from the &apos;Current Contract Performance&apos; value on the Account record</inlineHelpText>
    <label>Current Contract Compliance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>