_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Current_Customer_Assessment__c.field-meta.xml
<CustomField>
    <fullName>BI_Current_Customer_Assessment__c</fullName>
    <label>Current Customer Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start-Up</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Maintain</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
            <value>
                <fullName>Merger/Acquisition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>