_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_EPP_Measurement_Period__c.field-meta.xml
<CustomField>
    <fullName>BI_EPP_Measurement_Period__c</fullName>
    <description>Deprecated in BI Release 2019 - 11</description>
    <formula>BI_Account__r.Back_End_Performance_Quarter__c</formula>
    <inlineHelpText>Field is auto populated from the &apos;Back/End Performance - Quarter&apos; value on the Account record</inlineHelpText>
    <label>xEPP Measurement Period</label>
    <type>Text</type>
</CustomField>