_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_EPP_Performance_JV_Pacific__c.field-meta.xml
<CustomField>
    <fullName>BI_EPP_Performance_JV_Pacific__c</fullName>
    <description>Deprecated in BI Release 2019 - 11</description>
    <formula>BI_Account__r.SIP_Back_End_Performance_JV__c</formula>
    <inlineHelpText>Field is auto populated from the &apos;Back/End Performance - JV&apos; value on the Account record</inlineHelpText>
    <label>xEPP Performance - JV Pacific</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>