_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_EPP_Performance_Transatlantic__c.field-meta.xml
<CustomField>
    <fullName>BI_EPP_Performance_Transatlantic__c</fullName>
    <formula>BI_Account__r.SIP_Back_End_Performance_Transatlantic__c</formula>
    <inlineHelpText>Field is auto populated from the &apos;Back/End Performance - Transatlantic&apos; value on the Account record</inlineHelpText>
    <label>xEPP Performance - Transatlantic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>