_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Highlight_YOY_Changes__c.field-meta.xml
<CustomField>
    <fullName>BI_Highlight_YOY_Changes__c</fullName>
    <inlineHelpText>Provide insight about any changes to your planning for this account, this year, when compared to last year&apos;s plan.</inlineHelpText>
    <label>Highlight YOY Changes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>