_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Industry_Flown_Revenue_12_ME__c.field-meta.xml
<CustomField>
    <fullName>BI_Industry_Flown_Revenue_12_ME__c</fullName>
    <description>Deprecated in BI Release 2019 - 11 (field is added to / moved to  the Account Object: Industry Flown Revenue)</description>
    <label>xIndustry Flown Revenue (12 ME)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>