_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_JV_Bookings_12_ME__c.field-meta.xml
<CustomField>
    <fullName>BI_JV_Bookings_12_ME__c</fullName>
    <description>Deprecated in BI Release 2019 - 11</description>
    <label>xJV Bookings (12 ME)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>