_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_JV_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>BI_JV_Revenue_Target__c</fullName>
    <label>JV Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>