_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_JV_Sales_12_ME__c.field-meta.xml
<CustomField>
    <fullName>BI_JV_Sales_12_ME__c</fullName>
    <description>Deprecated in BI Release 2019 - 11</description>
    <label>xJV Sales (12 ME)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>