_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Link_to_Metric_Completion_Assistant__c.field-meta.xml
<CustomField>
    <fullName>BI_Link_to_Metric_Completion_Assistant__c</fullName>
    <defaultValue>&apos;https://team.ual.com/collab/sis_helpdesk/FTDownloads/Information%20Systems/Metric%20Completion%20Assistant.xls&apos;</defaultValue>
    <label>xLink to Metric Completion Assistant</label>
    <type>Url</type>
</CustomField>