_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_ManagerRSD_Review_Completed_On__c.field-meta.xml
<CustomField>
    <fullName>BI_ManagerRSD_Review_Completed_On__c</fullName>
    <label>Manager / RSD Review Completed On</label>
    <type>Date</type>
</CustomField>