_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Measurement_Period_12_Months_Ending__c.field-meta.xml
<CustomField>
    <fullName>BI_Measurement_Period_12_Months_Ending__c</fullName>
    <description>Deprecated in BI Release 2019 - 11</description>
    <inlineHelpText>Denotes the  12 month period ending date for plan data in fields ending in (12 ME)</inlineHelpText>
    <label>xMeasurement Period - 12 Months Ending</label>
    <type>Date</type>
</CustomField>