_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>BI_Opportunities__c</fullName>
    <label>xOpportunities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>