_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Part_of_My_Division__c.field-meta.xml
<CustomField>
    <fullName>BI_Part_of_My_Division__c</fullName>
    <formula>IF( OR(($User.Id = OwnerId), (TEXT($User.BI_Objective_Division__c) = Text(Owner:User.BI_Objective_Division__c)),($User.Id = BI_Account__r.SIP_Sales_Service_Manager__r.Id ),($User.Sales_Region__c = Owner:User.Sales_Region__c) ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part of My Division</label>
    <type>Checkbox</type>
</CustomField>