_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Part_of_My_Region__c.field-meta.xml
<CustomField>
    <fullName>BI_Part_of_My_Region__c</fullName>
    <formula>IF( OR(($User.Id = OwnerId), ($User.Sales_Region__c = Owner:User.Sales_Region__c),($User.Id = BI_Account__r.SIP_Sales_Service_Manager__r.Id ) ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part of My Region</label>
    <type>Checkbox</type>
</CustomField>