_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Percentage_of_APM2__c.field-meta.xml
<CustomField>
    <fullName>BI_Percentage_of_APM2__c</fullName>
    <description>Deprecated in BI Release 2019 - 11 (field moved / added to account object)</description>
    <formula>IF( ((BI_APM_12_ME__c  &lt;&gt; null) || (BI_APM_12_ME__c  &lt;&gt; 0)),(BI_Share_12_ME__c / BI_APM_12_ME__c), null)</formula>
    <inlineHelpText>Formula:  Share % (12ME) / APM % (12 ME)</inlineHelpText>
    <label>xJV % of APM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>