_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Plan_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>BI_Plan_Owner_Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName  &amp; &apos; &apos; &amp;
Owner:User.Manager.LastName</formula>
    <label>Plan Owner&apos;s Manager / RSD</label>
    <type>Text</type>
</CustomField>