_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Plan_Owner_Manager_Manager__c.field-meta.xml
<CustomField>
    <fullName>BI_Plan_Owner_Manager_Manager__c</fullName>
    <formula>Owner:User.Manager.Manager.FirstName &amp; &apos; &apos; &amp;   Owner:User.Manager.Manager.LastName</formula>
    <label>Plan Owner&apos;s Manager&apos;s Manager / MD</label>
    <type>Text</type>
</CustomField>