_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Primary_Strategic_Focus__c.field-meta.xml
<CustomField>
    <fullName>BI_Primary_Strategic_Focus__c</fullName>
    <label>Primary Strategic Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New (Acquire / Establish)</fullName>
            </value>
            <value>
                <fullName>Maintain</fullName>
            </value>
            <value>
                <fullName>Retain (Renew / Defend)</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>