_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_RSDMD_Review_Completed_On__c.field-meta.xml
<CustomField>
    <fullName>BI_RSDMD_Review_Completed_On__c</fullName>
    <label>RSD/MD Review Completed On</label>
    <type>Date</type>
</CustomField>