_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Share_12_ME__c.field-meta.xml
<CustomField>
    <fullName>BI_Share_12_ME__c</fullName>
    <description>Deprecated in BI Release 2019 - 11 (field moved / added to account object as a formula field)</description>
    <inlineHelpText>Sales or Bookings Share %</inlineHelpText>
    <label>xJV Share % (12 ME)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>