_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Share_Premium_12_ME__c.field-meta.xml
<CustomField>
    <fullName>BI_Share_Premium_12_ME__c</fullName>
    <description>Deprecated in BI Release 2019 - 11 (field moved / added to account as points, not %)</description>
    <formula>IF((BI_Share_12_ME__c &lt;&gt; null  || BI_Share_12_ME__c &lt;&gt; 0)  &amp;&amp; (BI_APM_12_ME__c &lt;&gt; null || BI_APM_12_ME__c &lt;&gt; 0), BI_Share_12_ME__c  -  BI_APM_12_ME__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto Calculated Formula:  Share % (12 ME) - APM % (12 ME)</inlineHelpText>
    <label>xJV Share Premium % (12 ME)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>