_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Share_Premium_Target__c.field-meta.xml
<CustomField>
    <fullName>BI_Share_Premium_Target__c</fullName>
    <description>Deprecated in BI Release 2019 - 11 (field is NOT added to the Account)</description>
    <label>xShare Premium Target (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>