_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Soft_Dollar_Benefits__c.field-meta.xml
<CustomField>
    <fullName>BI_Soft_Dollar_Benefits__c</fullName>
    <description>Deprecated in BI Release 2019 - 11</description>
    <label>xSoft Dollar Benefits</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>