_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Strategic_Plan_Details__c.field-meta.xml
<CustomField>
    <fullName>BI_Strategic_Plan_Details__c</fullName>
    <description>Deprecated in BI Release 2019 -11</description>
    <label>xStrategic Plan Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>