_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Strengths__c.field-meta.xml
<CustomField>
    <fullName>BI_Strengths__c</fullName>
    <label>xStrengths</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>