_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Threats__c.field-meta.xml
<CustomField>
    <fullName>BI_Threats__c</fullName>
    <label>xThreats</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>