_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/BI_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>BI_Weaknesses__c</fullName>
    <description>Deprecated in BI Release 2019 - 11</description>
    <label>xWeaknesses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>