_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/is_approved__c.field-meta.xml
<CustomField>
    <fullName>is_approved__c</fullName>
    <formula>if(not(isblank(BI_ManagerRSD_Review_Completed_On__c)), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mgr_RSD Approved</label>
    <type>Checkbox</type>
</CustomField>