_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/JV_Flown_Revenue_12_ME__c.field-meta.xml
<CustomField>
    <fullName>JV_Flown_Revenue_12_ME__c</fullName>
    <description>Deprecated in BI Release 2019 - 11 (field moved / added to account object)</description>
    <formula>BI_AC_Flown_Revenue_12_ME__c  +  BI_LH_Group_Flown_Revenue_12_ME__c  +  BI_NH_Flown_Revenue_12_ME__c  +  BI_NZ_Flown_Revenue_12_ME__c   +  BI_UA_Flown_Revenue_12_ME__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xJV Flown Revenue (12 ME)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>