_Source/force-app/main/default/objects/BI_Account_Plan__c/fields/RSD_MD_Approved__c.field-meta.xml
<CustomField>
    <fullName>RSD_MD_Approved__c</fullName>
    <formula>if(not(isblank( BI_RSDMD_Review_Completed_On__c )), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSD_MD Approved</label>
    <type>Checkbox</type>
</CustomField>