_Source/force-app/main/default/objects/BI_Account_Plan__c/recordTypes/BI_Agency_Account_Plan.recordType-meta.xml
<RecordType>
    <fullName>BI_Agency_Account_Plan</fullName>
    <active>true</active>
    <label>Agency Account Plan</label>
</RecordType>