_Source/force-app/main/default/objects/BI_Account_Plan__c/listViews/All_Account_Plans.listView-meta.xml
<ListView>
    <fullName>All_Account_Plans</fullName>
    <columns>BI_Plan_Year__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Plan_Year__c</field>
        <operation>notEqual</operation>
        <value>2021,2022,2023,2024,2025,2026,2027</value>
    </filters>
    <label>All Account Plans</label>
    <language>en_US</language>
</ListView>