_Source/force-app/main/default/objects/BI_Account_Plan__c/listViews/All_Account_Plans_Current.listView-meta.xml
<ListView>
    <fullName>All_Account_Plans_Current</fullName>
    <columns>BI_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>BI_Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>BI_Status__c</columns>
    <columns>BI_Plan_Owner_Manager__c</columns>
    <columns>BI_Plan_Owner_Manager_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Plan_Year__c</field>
        <operation>equals</operation>
        <value>2019,2020</value>
    </filters>
    <label>All Account Plans - Current</label>
</ListView>