_Source/force-app/main/default/objects/BI_Account_Plan__c/listViews/All_My_Account_Plans_Corporate.listView-meta.xml
<ListView>
    <fullName>All_My_Account_Plans_Corporate</fullName>
    <columns>BI_Plan_Year__c</columns>
    <columns>BI_Account__c</columns>
    <columns>NAME</columns>
    <columns>BI_Status__c</columns>
    <columns>BI_Primary_Strategic_Focus__c</columns>
    <columns>BI_Current_Customer_Assessment__c</columns>
    <columns>BI_JV_Revenue_Target__c</columns>
    <columns>BI_UA_Revenue_Target__c</columns>
    <columns>BI_Dollarized_Share_Premium_Target__c</columns>
    <columns>BI_ManagerRSD_Review_Completed_On__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BI_Account_Plan__c.BI_Corporate_Account_Plan</value>
    </filters>
    <label>My Account Plans - All (Corporate)</label>
</ListView>